Format error under project section

--- a/main.tex
+++ b/main.tex
@@ -99,8 +99,8 @@
         \MySectionB{2022-2023}{RYSA.png}{Restoration Technician}{RYSA Group LTD}{Wagga Wagga, NSW}
         {{Responsibilities \& Achievements}
             \begin{itemize}
-                \item Managed data recording and authored comprehensive restoration reports.
-                \item Automated customer data processing by developing an email pipeline using Python and the Gmail API.
+                \item Managed data recording and authored detailed restoration reports.
+                \item Developed and deployed a Python-based email pipeline using the Gmail API.
                 \item Designed and launched the company website using the Next.js React framework.
             \end{itemize}}
 
@@ -119,11 +119,11 @@
         % Publications
         \section*{{\faBookmark} PROJECTS}
 
-        \publication{Master Thesis}{2022}{Pricing Asian Options in Matlab}{Implemented a well-known pricing model in \textsc{Matlab} and improved its efficiency by reducing the time complexity of the algorithm.}{https://github.com/leele2/Mathematics-in-Business-Project/blob/master/report.pdf}{View on Github}
+        \publication{Master Thesis}{2022}{Pricing Asian Options in Matlab}{Implemented a pricing model in \textsc{Matlab} and improved its efficiency by reducing the time complexity of the algorithm.}{https://github.com/leele2/Mathematics-in-Business-Project/blob/master/report.pdf}{View on Github}
 
         \sectionspace
 
-        \publication{End-of-year Project}{2020}{Marine Heat Waves and Their Effects on Phytoplankton}{Analyzed large satellite datasets to identify marine heat waves and model their impact on phytoplankton in R.}{https://github.com/leele2/Research-in-Mathematical-Sciences---CA3/blob/main/report.pdf}{View on Github}
+        \publication{End-of-year Project}{2020}{Marine Heat Waves and Their Effects on Phytoplankton}{Utilized R to analyze large satellite datasets, identifying marine heat waves and their effects on phytoplankton.}{https://github.com/leele2/Research-in-Mathematical-Sciences---CA3/blob/main/report.pdf}{View on Github}
 
         \sectionspace
 
