--- a/preamble.sty
+++ b/preamble.sty
@@ -183,7 +183,7 @@
         \end{minipage}}
     \hfill
     \adjustbox{valign=t}{\begin{minipage}{8cm}
-            {\footnotesize \textbf{#3}, #4, \faGithub \hspace{0.1mm} \href{#5}{#6}}
+            {\footnotesize \textbf{#3}, #4 \faGithub \hspace{0.1mm} \href{#5}{#6}}
         \end{minipage}}
 }
 
